# finance-tracker

./: .gitignore  Readme  Readme.md  pyproject.toml  sample.xlsx
src/: app.py  data.py  model.py
src/financial_data_analyser/: app.py  cli.py  data.py  model.py
src/financial_data_analyser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
