[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-data-analyser"
version = "0.1.0"
description = "A Streamlit dashboard for analysing financial transaction data and forecasting outgoing expenses with SARIMA."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Arpit Agrawal" }
]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "streamlit>=1.30",
  "plotly>=5.18",
  "statsmodels>=0.14",
  "openpyxl>=3.1",
  "matplotlib>=3.7"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]